# INF2004_T52

./: .gitignore  README.md
driver/: CMakeLists.txt  controller.c
driver/encoder/: CMakeLists.txt  encoder.c  encoder.h
driver/irline_barcode/: CMakeLists.txt  infraredMain.c  infraredMain.h
driver/irline_nagivation/: CMakeLists.txt
driver/irline_navigation/: irline_navigation.c
driver/line_detector/: CMakeLists.txt  line_detector.c
driver/magnetometer/: CMakeLists.txt  magnetometer.c  magnetometer.h
driver/magnometer/: CMakeLists.txt  magnometer.c
driver/motor/: CMakeLists.txt  motor.c  motor.h  motor_test.c  pid.c  pid.h
driver/ultrasonic/: CMakeLists.txt  README.md  cmExample.c  ultrasonic.c  ultrasonic.h  ultrasonicObject.cpp  ultrasonicObject.h
driver/wifi/: CMakeLists.txt  cgi.h  htmldata.c  lwipopts.h  main.c  makefsdata.py  ssi.h
driver/wifi/html_files/: index.shtml
irline_barcode/: CMakeLists.txt  irline_barcode.c
line_detector/: line_detector.h
